tests/fixtures/valid/strings/double_single_strings.pine
//@version=6
indicator("Strings")
a = "hello"
b = 'world'
label.new(bar_index, high, a + b)
plot(close)
