tests/fixtures/invalid/semantic/compound_target_type.pine
//@version=6
indicator("Bad")
string s = "a"
s += "b"
